force-app/main/default/objects/Invoice_Generation_Queue__c/Invoice_Generation_Queue__c.object-meta.xml
<CustomObject>
    <label>Invoice Generation Queue</label>
    <nameField>
        <displayFormat>IGQ-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Generation Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>