force-app/main/default/objects/Invoice_Generation_Queue__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request to Generate Invoice</fullName>
            </value>
            <value>
                <fullName>Receive the Invoice</fullName>
            </value>
            <value>
                <fullName>Send to Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>