force-app/main/default/objects/Invoice_Generation_Queue__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice Generation Queues</relationshipLabel>
    <relationshipName>Invoice_Generation_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>