force-app/main/default/objects/Invoice_Generation_Queue__c/fields/Queue_Status__c.field-meta.xml
<CustomField>
    <fullName>Queue_Status__c</fullName>
    <label>Queue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Queue_Status</valueSetName>
    </valueSet>
</CustomField>